fix overflow

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,6 +7,7 @@ body.wrapper {
   width: 100%;
   max-width: 100%;
   padding-bottom: 90px;
+  overflow: hidden;
 
   * {
     box-sizing: border-box;
@@ -24,6 +25,11 @@ html, body, div, a, p, h1, h2, h3, h4, h5, h6 {
 }
 a {
   text-decoration: none;
+}
+.pageContent {
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
 }
 
 .screenTopNotification {
@@ -126,8 +132,4 @@ body.wrapper .btn-primary {
 }
 body.wrapper .form-control:focus {
   border-color: #fe8d03;
-}
-.pageContent {
-  overflow-x: hidden;
-  width: 100%;
 }
